src/test/ui/error-codes/E0401.stderr
error[E0401]: can't use type or const parameters from outer function; try using a local type parameter instead
  --> $DIR/E0401.rs:12:15
   |
12 |     fn bar(y: T) { //~ ERROR E0401
   |               ^ use of type or const variable from outer function

error: aborting due to previous error

